--- a/frontend/app/styles/partials/preview.scss
+++ b/frontend/app/styles/partials/preview.scss
@@ -1,6 +1,6 @@
 .bgImg {
   border-radius: 5px;
-  height: 600px;
+  height: 500px !important;
 }
 
 .preview.content {
